@@ -223,3 +223,5 @@ These switches are used to limit the number of units displayed.
 -wgt <d>: Only list units of weight <d>.
 
 -rule <d>: Only list units with rules level <d> or lower.
+
+-vtol: Only list VTOLs.
