@@ -1,3 +1,7 @@
+2012-07-27  Christer Nyfält  <cjnyfalt@yahoo.co.uk>
+
+	* Added VTOL filter.
+
 2012-07-23  Christer Nyfält  <cjnyfalt@yahoo.co.uk>
 
 	* Added more code documentation to jump.py.
